[gd_scene load_steps=2 format=3 uid="uid://ckfm4gfawu1od"]

[ext_resource type="Script" uid="uid://b1syq8tc8305c" path="res://Scripts/Authentication.gd" id="1_6ea5n"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6ea5n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 503.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Logged In"

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Your Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Your Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log In"

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
